--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: exam-management
 
   profiles:
-    active: prod #dev
+    active: prod
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
